--- a/AcademyPersistance/AcademyEfPersistance.csproj
+++ b/AcademyPersistance/AcademyEfPersistance.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\AcademyModel\AcademyModel.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
