--- a/CodeAcademyWeb/CodeAcademyWeb.csproj
+++ b/CodeAcademyWeb/CodeAcademyWeb.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
+    <PackageReference Include="NodaTime" Version="3.0.7" />
   </ItemGroup>
 
   <ItemGroup>
